--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-keepalive-router",
-  "version": "1.1.3",
-  "description": "基于`react 16.8+` ,`react-router 4+` 开发的`react`缓存组件，可以用于缓存页面组件，类似`vue`的`keepalive`包裹`vue-router`的效果功能。",
+  "version": "2.0.0",
+  "description": "基于`react 16.8+` ,`react-router` 开发的`react`缓存组件，可以用于缓存页面组件，类似`vue`的`keepalive`包裹`vue-router`的效果功能。v2 版本全面支持 react-router v6 版本",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,7 +17,7 @@
   "homepage": "https://github.com/AlienZhaolin/react-keepalive-router",
   "peerDependencies": {
     "react": ">=16.8",
-    "react-router-dom": ">=4",
+    "react-router-dom": ">=6",
     "invariant": ">=2"
   },
   "author": "alien",
